ingress-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  rules:
  - http:
      paths:
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: myproducer-service
            port:
              number: 5000
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: hello-app-v1-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: neo-app-rate-limit
  annotations:
    konghq.com/plugins: twelve-per-min
spec:
  selector:
    app: neo-ingress
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cart-rate-limit
  annotations:
    konghq.com/plugins: twelve-per-min
spec:
  selector:
    app: cart
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-rate-limit
  annotations:
    konghq.com/plugins: twelve-per-min
spec:
  selector:
    app: order
  ports:
  - port: 80
    targetPort: 8081
